# InfinityScript

./: CMakeLists.txt
src/: lexer.cpp  lexer.h  main.cpp  toolbox.cpp  toolbox.h
